--- a/adreses.html
+++ b/adreses.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
     <head>
-        <link href="../css/Css testweb1.css" rel="stylesheet" type="text/css"/>
+        <link href="Css testweb1.css" rel="stylesheet" type="text/css"/>
         <title> Ziemas prieku vietas </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -71,8 +71,8 @@
             </table>
         </div>
         <div>
-            <a href="../index.html">
-                <img src="../images/bults.jpg" alt="atpakaļ" style="width:100px;height:50px;">
+                <a href="index.html">
+                <img src="images/bults.jpg" alt="atpakaļ" style="width:100px;height:50px;"/>
             </a>
         </div>
     </body>        
