--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="css/Css testweb1.css" rel="stylesheet" type="text/css"/>
+        <link href="Css testweb1.css" rel="stylesheet" type="text/css"/>
         <title>Ziemas prieki</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,8 @@
                 <img src="images/Ziema.jpg" alt="Idejas, ko apmeklēt Latvijā ziemas laikā." style='width:500px; height:350px;'>
             </a>
             <p> 
-                <a href="public_html/adreses.html"> Saite </a> uz lapu ar ziemas soportu galamērķiem! 
+                <a href="adreses.html">
+                Saite </a> uz lapu ar ziemas soportu galamērķiem! 
             </p>
         </div>
     </body>
